fix overflow

--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -26,5 +26,7 @@ html, body {
 
 body {
     background-color: $beige;
+}
+.overflow{
     overflow-x: hidden;
 }
