--- a/_sass/components/_trophy.scss
+++ b/_sass/components/_trophy.scss
@@ -99,7 +99,8 @@
             flex-direction: row-reverse;
             justify-content: space-around;
             align-content: center;
-            overflow: hidden;
+            // overflow: hidden;
+        
 
             img {
                 padding-top: 8px;
